--- a/index.html
+++ b/index.html
@@ -1,44 +1,86 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <link href='https://fonts.googleapis.com/css?family=Chivo:900' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="favicon.ico">
+
+    <title>JE Morgan Solutions Ltd</title>
+
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+
+    <!-- Custom styles for this template -->
+    <link href="css/cover.css" rel="stylesheet">
+
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="libs/ie10-viewport-bug-workaround.js"></script>
+
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <title>Jem-solutions by jamesmorgan</title>
-  </head>
 
-  <body>
-    <div id="container">
-      <div class="inner">
+</head>
 
-        <header>
-          <h1>JEM-Solutions</h1>
-          <h2>James Morgan - <small>Software Engineer</small></h2>
-        </header>
+<body>
 
-        <section id="downloads" class="clearfix">
-            Links
-        </section>
+<div class="site-wrapper">
 
-        <hr>
+    <div class="site-wrapper-inner">
 
-        <section id="main_content">
-            Main Content
-        </section>
+        <div class="cover-container">
 
-        <hr>
+            <div class="masthead clearfix">
+                <div class="inner">
+                    <h3 class="masthead-brand">...</h3>
+                    <ul class="nav masthead-nav">
+                        <li class="active"><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
 
-        <footer>
-          Jem-solutions is maintained by <a href="https://github.com/jamesmorgan">jamesmorgan</a><br>
-        </footer>
+            <div class="inner cover">
+                <h1 class="cover-heading">JEM Solutions Ltd</h1>
 
-      </div>
+                <p class="lead">
+                    Software Engineering and Solutions Development
+                </p>
+
+                <p class="lead">
+                    <a href="#" class="btn btn-lg btn-default">Find out more</a>
+                </p>
+            </div>
+
+            <div class="mastfoot">
+                <div class="inner">
+                    <p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a
+                            href="https://twitter.com/mdo">@mdo</a>.</p>
+                </div>
+            </div>
+
+        </div>
+
     </div>
-  </body>
+
+</div>
+
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+
+<script src="libs/docs.min.js"></script>
+
+<!-- The Angular App -->
+<script src="js/app.js"></script>
+
+</body>
 </html>
