--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 </head>
 
-<body>
+<body ng-app="myApp">
 
 <div class="site-wrapper">
 
@@ -39,29 +39,19 @@
                 <div class="inner">
                     <h3 class="masthead-brand">...</h3>
                     <ul class="nav masthead-nav">
-                        <li class="active"><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li class="active"><a href="/">Home</a></li>
+                        <li><a href="/about">About</a></li>
+                        <li><a href="/contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
 
-            <div class="inner cover">
-                <h1 class="cover-heading">JEM Solutions Ltd</h1>
-
-                <p class="lead">
-                    Software Engineering and Solutions Development
-                </p>
-
-                <p class="lead">
-                    <a href="#" class="btn btn-lg btn-default">Find out more</a>
-                </p>
-            </div>
+            <div ng-view></div>
 
             <div class="mastfoot">
                 <div class="inner">
                     <p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a
-                            href="https://twitter.com/mdo">@mdo</a>.</p>
+                            href="https://twitter.com/mdo">@mdo</a>. - Version <span app-version></span></p>
                 </div>
             </div>
 
@@ -77,8 +67,21 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
+<!-- Angular JS -->
+<script src="libs/angular-1.3.0-beta.19/angular.js"></script>
+<script src="libs/angular-1.3.0-beta.19/angular-route.js"></script>
+<script src="libs/angular-1.3.0-beta.19/angular-touch.js"></script>
+
+<script src="libs/angular-1.3.0-beta.19/angular-sanitize.js"></script>
+<script src="libs/angular-1.3.0-beta.19/angular-loader.js"></script>
+<script src="libs/angular-1.3.0-beta.19/angular-messages.js"></script>
+
+<!--<script src="libs/angular-1.3.0-beta.19/angular-resource.js"></script>-->
+
 <!-- The Angular App -->
 <script src="js/app.js"></script>
+<script src="js/controllers.js"></script>
+<script src="js/services.js"></script>
 
 </body>
 </html>
