Adding basic navigation

--- a/index.html
+++ b/index.html
@@ -35,25 +35,11 @@
 
         <div class="cover-container">
 
-            <div class="masthead clearfix">
-                <div class="inner">
-                    <h3 class="masthead-brand">...</h3>
-                    <ul class="nav masthead-nav">
-                        <li class="active"><a href="/">Home</a></li>
-                        <li><a href="#/about">About</a></li>
-                        <li><a href="#/contact">Contact</a></li>
-                    </ul>
-                </div>
-            </div>
+            <div ng-include="includes/top-nav.html" />
 
             <div ng-view></div>
 
-            <div class="mastfoot">
-                <div class="inner">
-                    <p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a
-                            href="https://twitter.com/mdo">@mdo</a>. - Version <span app-version></span></p>
-                </div>
-            </div>
+            <div ng-include="includes/footer.html" />
 
         </div>
 
