--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 
         <div class="cover-container">
 
-            <div ng-include="includes/top-nav.html" />
+            <div ng-include="'includes/top-nav.html'"></div>
 
             <div ng-view></div>
 
-            <div ng-include="includes/footer.html" />
+            <div ng-include="'includes/footer.html'"></div>
 
         </div>
 
