--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <script src="js/app.js"></script>
 <script src="js/controllers.js"></script>
 <script src="js/services.js"></script>
-<script src="js/directives.js"></script>
+<script src="js/directives/appVersion.js"></script>
 
 </body>
 </html>
