--- a/index.html
+++ b/index.html
@@ -1,23 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html class="no-js">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="favicon.ico">
+    <title ng-bind="pageTitle"></title>
 
-    <title>JE Morgan Solutions Ltd</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 
-    <!-- Custom styles for this template -->
-    <link href="css/cover.css" rel="stylesheet">
-
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="libs/ie10-viewport-bug-workaround.js"></script>
+    <link rel="stylesheet" href="build/css/cover.css">
+    <link rel="stylesheet" href="build/css/main.min.css">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -26,8 +22,7 @@
     <![endif]-->
 
 </head>
-
-<body ng-app="myApp">
+<body>
 
 <div class="site-wrapper">
 
@@ -37,7 +32,7 @@
 
             <div ng-include="'includes/top-nav.html'"></div>
 
-            <div ng-view></div>
+            <div ui-view></div>
 
             <div ng-include="'includes/footer.html'"></div>
 
@@ -48,27 +43,11 @@
 </div>
 
 <!-- Bootstrap core JavaScript
-================================================== -->
+================================================== -->x
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
-<!-- Angular JS -->
-<script src="libs/angular-1.3.0-beta.19/angular.js"></script>
-<script src="libs/angular-1.3.0-beta.19/angular-route.js"></script>
-<script src="libs/angular-1.3.0-beta.19/angular-touch.js"></script>
-<script src="libs/angular-1.3.0-beta.19/angular-messages.js"></script>
-
-<script src="libs/angular-1.3.0-beta.19/angular-sanitize.js"></script>
-<script src="libs/angular-1.3.0-beta.19/angular-loader.js"></script>
-
-<!--<script src="libs/angular-1.3.0-beta.19/angular-resource.js"></script>-->
-
-<!-- The Angular App -->
-<script src="js/app.js"></script>
-<script src="js/controllers.js"></script>
-<script src="js/services.js"></script>
-<script src="js/directives/appVersion.js"></script>
-
+<script src="build/js/main.min.js"></script>
 </body>
 </html>
