--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
-<script src="build/js/main.min.js"></script>
+<script src="build/js/main.js"></script>
 </body>
 </html>
