--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="JE Morgan Solutions Ltd Company Website">
+    <meta name="author" content="James Morgan">
+    <meta name="google-site-verification" content="ISbvPPrRM0UgKaFhfNiAMQrthAOGzRGglxUQaplPILM"/>
+
     <title ng-bind="pageTitle"></title>
 
 
