--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="description" content="JE Morgan Solutions Ltd Company Website">
     <meta name="author" content="James Morgan">
     <meta name="google-site-verification" content="ISbvPPrRM0UgKaFhfNiAMQrthAOGzRGglxUQaplPILM"/>
-
+    <meta name="google-site-verification" content="Ovj5MbgcSewdUfALhKEU00slHkCg5eMPc29Dv4S8Qgs"/>
+    
     <title ng-bind="pageTitle"></title>
 
 
